--- a/layout.ui
+++ b/layout.ui
@@ -27,7 +27,7 @@
        <item row="0" column="0">
         <widget class="QPushButton" name="pbClearTable">
          <property name="text">
-          <string>PushButton</string>
+          <string>Clear</string>
          </property>
         </widget>
        </item>
@@ -57,7 +57,7 @@
      <x>0</x>
      <y>0</y>
      <width>571</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
