--- a/layout.ui
+++ b/layout.ui
@@ -31,7 +31,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
+       <item row="0" column="1" colspan="2">
         <widget class="QLineEdit" name="leSl3Location"/>
        </item>
        <item row="1" column="0">
@@ -47,6 +47,29 @@
           <string>Clear</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="2">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>368</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="pbLoadTables">
+         <property name="text">
+          <string>Load Tables</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" colspan="2">
+        <widget class="QComboBox" name="cmbTables"/>
        </item>
       </layout>
      </widget>
